# monorepo-rs

./: Cargo.toml  Makefile  README.md  pre-commit.sample  pre-push.sample
.cargo/: config.toml
.github/workflows/: pipeline.yaml  pipeline_simplified.yaml
crates/shared_aws/: Cargo.toml
crates/shared_aws/src/: lib.rs
crates/shared_aws/src/dynamodb/: mod.rs  util.rs
crates/shared_aws/src/sns/: mod.rs  sns_topic_service.rs
crates/shared_common/: Cargo.toml
crates/shared_common/src/: lib.rs
crates/shared_common/src/entity/: uuid.rs
crates/shared_common/src/enum/: mod.rs
crates/shared_common/src/error/: axum_error.rs  dynamodb_error.rs  http_custom_error.rs  mod.rs  repository_error.rs
crates/shared_common/src/service/: mod.rs  topic_service.rs
crates/shared_infra/: Cargo.toml
crates/shared_infra/src/: lib.rs
crates/shared_infra/src/axum/: axum_app.rs  axum_middlewares.rs  mod.rs
crates/shared_infra/src/log/: mod.rs  tracing_fmt.rs  tracing_log.rs
