[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]
axum = { version = "0.7.9" }
tracing = { version = "0.1.40" }
tracing-core = { version = "0.1.32" }
tracing-subscriber = { version = "0.3.18", features = ["json", "fmt"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = { version = "1.0.93" }