[package]
name = "shared_aws"
version = "0.1.2"
edition = "2021"

[dependencies]
shared_common = { path = "../shared_common", version = "0.1.2" }
aws-sdk-dynamodb = { version = "1.54.0", optional = true }
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }

[features]
dynamodb = ["dep:aws-sdk-dynamodb"]
sns = []
