[package]
name = "shared_common"
version = "0.1.2"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true, optional = true }
aws-sdk-dynamodb = { version = "1.54.0", optional = true }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
thiserror = { version = "2.0.3" }

[features]
default = ["dynamodb_error"]
dynamodb_error = ["dep:aws-sdk-dynamodb"]
axum_error = ["dep:axum"]
